fixed error on small viewports

--- a/src/Smartphone.css
+++ b/src/Smartphone.css
@@ -1,6 +1,5 @@
 .smartphone-details {
   display: grid;
-  grid-template-columns: minmax(90px, 1fr) minmax(40px, 1fr);
   grid-auto-rows: minmax(0, auto);
   grid-gap: 2px;
   font-size: 16px;
@@ -12,11 +11,11 @@
   margin-top: 15px;
   border-radius: 8px;
   border: #e0e0e0 2px solid;
-  min-width: 250px;
 }
 
 .smartphone-details p {
   display: inline;
+  white-space: nowrap;
 }
 
 .smartphone-filtercriteria {
@@ -92,6 +91,8 @@
   align-items: flex-end;
   display: flex;
   justify-content: center;
+  height: calc((100vh - 510px));
+  min-height: 200px;
 }
 
 .horizontalRule {
